--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,7 @@ main{
 header{
 
     width: 100%;
+    height: 95px;
     background-image: linear-gradient(to left, #FF00BF,#F781F3);
 
 }
@@ -32,7 +33,7 @@ header:after, header:before{
     height: 45px;
     position: relative;
     right: 35px;
-    bottom: 10px;
+    bottom: 55px;
     float: right;
 
 }
@@ -62,10 +63,33 @@ header:after, header:before{
 #info-menu{
 
     width: 100%;
+    height: 100%;
     position: absolute;
     display: none;
     top: 0;
     background-color:#DF0174;
+
+}
+
+#logo-tipo{
+    width: 120px;
+    height: 80px;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    top: 7px;
+    left: 20px;
+}
+
+#logo-tipo img{
+    width: 100%;
+}
+
+#info-menu:after, #info-menu:before{
+
+    content: '';
+    clear: both;
+    display: table;
 
 }
 
@@ -97,7 +121,6 @@ header:after, header:before{
 #info-menu nav ul{
 
     position: relative;
-    border: 1px solid red;
     top: 15px;
 }
 
@@ -128,7 +151,5 @@ header:after, header:before{
 }
 
 .expandir{
-
     height: 300px; 
-
 }
