--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,8 @@ header{
 
     width: 100%;
     height: 95px;
-    background-image: linear-gradient(to left, #FF00BF,#F781F3);
+    /*background-image: linear-gradient(to left, #FF00BF,#F781F3);*/
+    background-color: red;
 
 }
 header:after, header:before{
@@ -67,7 +68,7 @@ header:after, header:before{
     position: absolute;
     display: none;
     top: 0;
-    background-color:#DF0174;
+    background-color:red;
 
 }
 
@@ -152,4 +153,44 @@ header:after, header:before{
 
 .expandir{
     height: 300px; 
+}
+
+
+@media screen and (min-width: 950px){
+
+    #container-button{
+        display: none;
+    }
+
+    #container-button-close{
+        display: none;
+    }
+
+    #info-menu{
+        width: 780px;
+        height: 95px;
+        right: 0;
+        display: block; 
+        background-color: transparent;
+        float: right;
+    }
+
+    #info-menu::after, #info-menu::before{
+        content: '';
+        clear: both;
+        display: table;
+    } 
+
+    #info-menu nav ul a li{
+        width: 200px;
+        position: relative;
+        bottom: 7px;
+        right: 10px;
+        margin-right: 10px;
+        font-size: 12pt;
+        display: inline-block;
+        background-color: transparent;
+    }
+
+    
 }
